log
vi., 22 de abr. de 2022  7:41:43: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:41:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->root = createTreeNode;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
a72a69e
vi., 22 de abr. de 2022  7:49:20: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->root = createTreeNode;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
101fd35
vi., 22 de abr. de 2022  7:49:27: 
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->root = createTreeNode;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
077bbf6
vi., 22 de abr. de 2022  7:52:52: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|8
total_score: 0/70
7d332d1
